# demo-python-cli

./: .gitignore  Makefile  README.md  README.md 
pypg/: Makefile  pyproject.toml  requirements.txt
pypg/pypg/: locations.py
pypg/tests/: test_pypg.py
scraper/: Makefile  pyproject.toml  setup.cfg
scrapper/: Makefile  pyproject.toml
scrapper/scrapper/: main.py  sample.py
scrapper/tests/: test_pypg.py
