[tool.poetry]
name = "pypg"
version = "0.1.0"
description = ""
authors = ["kavisek <kavi.skhon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
arrow = "^1.2.2"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
pypg = "pypg.main:cli"